tests/fails/attrload2.t
require("fail")


terra foo()
	var a = 3
	return terralib.attrload(a,{})
end

foo()
